--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <p>This is the first code in my repository which will help you so much</p>
+    <p>This is the first code in my repository which will help you so much..</p>
 </body>
 </html>
